--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
   },
   "homepage": "https://github.com/AndreasWidmer/youtube-music#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "typescript": "^3.9.2"
   },
   "engines": {
     "node": ">=10"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.1"
   }
 }
